- Fixed bug #27923. foreach() without a key should not check if the key - is a reference (Adam)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@156987 c90b9560-bf6c-de11-be94-00142212c4b1